<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ImageViewActivity">

    <LinearLayout
        android:id="@+id/imageview_top"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/imageview_logo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/logo_alt" />

        <TextView
            android:id="@+id/imageview_top_appname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="8dp"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/imageview_top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/imageview_wallpaper"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/imageview_template_content_description"
                android:src="@drawable/baseline_image_24" />

            <!-- Beschreibung -->
            <TextView
                android:id="@+id/imageview_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/imageview_template_description"
                android:textSize="18sp"
                android:textAlignment="center"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/imageview_button_set_wallpaper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:backgroundTint="@color/on_primary"
                android:onClick="onButtonSetWallpaper"
                android:text="@string/imageview_button_set_wallpaper"
                android:textColor="@android:color/white"
                android:textAllCaps="false" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/imageview_button_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="24dp"
                android:backgroundTint="@android:color/holo_red_dark"
                android:onClick="onButtonBackToLibrary"
                android:text="Löschen"
                android:textColor="@android:color/white"
                android:textAllCaps="false" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
